Prevent overflow of items

--- a/src/css/components/api-reference.css
+++ b/src/css/components/api-reference.css
@@ -13,3 +13,23 @@ html[class*="docs-doc-id-api-reference"] .markdown a code {
 html[class*="docs-doc-id-api-reference"] .markdown a code:hover {
   text-decoration: underline;
 }
+
+html[class*="docs-doc-id-api-reference"]
+  .theme-doc-sidebar-item-category-level-1
+  .menu__list {
+  padding-left: var(--spacer-2);
+}
+
+html[class*="docs-doc-id-api-reference"]
+  .theme-doc-sidebar-item-link-level-3
+  a {
+  font-family: var(--ifm-font-family-monospace);
+  font-size: var(--font-size-xs);
+  letter-spacing: -0.3px;
+}
+
+html[class*="docs-doc-id-api-reference"]
+  .theme-doc-sidebar-item-category-level-2
+  .menu__list {
+  padding-left: 0;
+}
